Fixes scrollbar appearing

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -92,7 +92,6 @@ $sides: done, backlog;
       margin-right: -$spacing;
 
       .dropSection {
-        height: 100%;
         padding-right: $spacing;
         min-height: 100%;
       }
